--- a/css/login.css
+++ b/css/login.css
@@ -1,53 +1,18 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login-container {
-    width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #FFFFFF; /* 白色背景 */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    text-align: center;
-}
-
-.logo-container {
-    margin-bottom: 20px;
+    background-color: #f8f9fa;
+    font-family: Arial, sans-serif;
 }
 
 .logo {
-    width: 100px; /* 根據實際大小調整 */
+    max-width: 150px;
 }
 
-.login-form {
-    display: flex;
-    flex-direction: column;
+.card {
+    padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-input[type="text"],
-input[type="password"] {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-button {
-    background-color: #00FF00; /* 綠色按鈕 */
-    color: #FFFFFF;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
+.login-form input {
+    height: 50px;
     font-size: 16px;
-}
-
-button:hover {
-    background-color: #008000; /* 深綠色 */
 }
